fixed profile panel spacing

--- a/scss/_userPanel.scss
+++ b/scss/_userPanel.scss
@@ -6,3 +6,19 @@
 		max-height: calc(100% - 50px);
     background-color: rgba(var(--PrimaryBG));
 }
+.accountProfilePopoutWrapper_b2ca13 {
+    bottom: -10px !important;
+		left: -3px !important;
+}
+.submenuPaddingContainer_d90b3d {
+    padding: 0 0;
+}
+.description_ad5fac {
+    display: none;
+}
+.divider_ad5fac, .separator_d90b3d {
+    display: none;
+}
+.item_d90b3d[id="account-switch-account"] {
+    display: none;
+}
